# hacnpx

./: .gitignore  .gitmodules
Battle.net/: Extract.py
C_C_3/: main.cpp  utils.cpp
DLL_unk/: dbg.h  dump.cpp  hook_stuff.h  main.cpp  module.cpp  pestuff.h  ressource.cpp  ressource.h
GameShield/: Archive(AXS.GS).py  README.md  userdb.txt
ROTH/: README.md  data100.py  icons.ALL.py
ROTH/palette/: README.md  pal_0.txt  pal_1.txt  pal_2.txt  pal_4.txt
SteamStub/: SteamStub32variant.1.py  SteamStub32variant.2.3.py  userdb.txt
SteamStuff/: test.cpp
Toolz/DaF/src/: af.cpp  af.h  daf.cpp  daf.h  daf.rc  dump.cpp  dump.h  process.cpp  process.h  resolveapi.cpp  resolveapi.h  resource.h
Toolz/Injected/: CMakeLists.txt  README.txt  build.bat
Toolz/Injected/src/: CMakeLists.txt  breakpoint.cpp  dbg.cpp  disas.cpp  dump.cpp  hookstuff.cpp  iatstuff.cpp  injected.cpp  memory.cpp  modules.cpp  pestuff.cpp  utils.cpp
Toolz/Injected/src/include/: breakpoint.h  dbg.h  disas.h  dump.h  hookstuff.h  iatstuff.h  injected.h  memory.h  modules.h  pestuff.h  utils.h
Toolz/Injected/src/include/capstone/: arm.h  arm64.h  capstone.h  mips.h  ppc.h  sparc.h  systemz.h  xcore.h
Toolz/Injected/test/: CMakeLists.txt
Toolz/Injected/test/sample_00/: make.bat  sample_00.asm
Toolz/Injected/test/self-testing/: CMakeLists.txt  injected_test.cpp
Toolz/Injected/test/test-esc/: CMakeLists.txt  test-esc.cpp  test-esc.h
Toolz/Injected/test/test-hook/: CMakeLists.txt  README.md  test-hook.cpp  test-hook.h
Toolz/Injected/test/test-pespin/: CMakeLists.txt  test-pespin.cpp
Toolz/Injector/: injector.c  injector.ini  make.bat
Toolz/MITM_dll/: README.md  mitm_dll.py
rand/C_C_3/: main.cpp  utils.h
rand/DLL_unk/: dbg.cpp  dump.cpp  dump.h  hook_stuff.cpp  module.h  pestuff.cpp
rand/DSLOA/: unpack.py
rand/Heroes_V/: main.cpp  utils.cpp
rand/Safe/: safe.py
rand/SteamStuff/: test.cpp
